--- a/ProductSystem/appsettings.json
+++ b/ProductSystem/appsettings.json
@@ -6,7 +6,7 @@
     }
   },
   "ConnectionStrings": {
-    "sqlConnection": "Data Source=(localdb)\\ProjectModels;Initial Catalog=ProductSystem;Integrated Security=True;Connect Timeout=30;Encrypt=False;Trust Server Certificate=False;Application Intent=ReadWrite;Multi Subnet Failover=False"
+    "sqlConnection": "Data Source=productdb; Initial Catalog=productdb; User ID=sa; Password=Inovation123$;TrustServerCertificate=True;Encrypt=false"
   },
   "AllowedHosts": "*"
 }
