--- a/ProductSystem/appsettings.json
+++ b/ProductSystem/appsettings.json
@@ -6,7 +6,7 @@
     }
   },
   "ConnectionStrings": {
-    "sqlConnection": "Data Source=productdb; Initial Catalog=productdb; User ID=sa; Password=Inovation123$;TrustServerCertificate=True;Encrypt=false"
+    "sqlConnection": "Data Source=SQL5106.site4now.net;Initial Catalog=db_a9c034_autocarex;User Id=db_a9c034_autocarex_admin;Password=Inovation123;TrustServerCertificate=True;Encrypt=false"
   },
   "AllowedHosts": "*"
 }
